--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ opencv-python~=4.11.0.86
 numpy~=1.26.4
 ultralytics~=8.1.34
 tqdm~=4.67.1
-torch==2.5.0
+torch~=2.5.0
 pyyaml~=6.0.2
 pillow~=11.1.0
-torchvision==0.20.0
+torchvision~=0.20.0
 shapely~=2.0.7
 thop~=0.1.1-2209072238
 requests~=2.32.3
