--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 huggingface-hub~=0.28.1
 paddleocr~=2.9.1
-paddlepaddle
+paddlepaddle==2.6.2
 opencv-python~=4.11.0.86
 numpy~=1.26.4
 ultralytics~=8.1.34
