--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ paddleocr~=2.9.1
 paddlepaddle==3.0.0b1
 protobuf~=5.29.3
 opencv-python~=4.11.0.86
+opencv-python-headless~=4.11.0.86
 numpy~=1.26.4
 ultralytics~=8.1.34
 tqdm~=4.67.1
